2002-06-05  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Removed the allow any item in back slot code.
	* gumps/Paperdoll_gump.cc : Fixed bug where items were in wrong places.
	* gumps/Paperdoll_gump_info.cc : Allow bags, barrels, boxes, crates,
	  chests and baskets to be placed in the back slot in BG.
	* cheat.cc : Fixing a few a warning, and adding missing header include
	* exult.cc, server/servemsg.cc : Getting win32 versions to build
	  without #define USE_EXULTSTUDIO
	* Makefile.win32, Makefile.cygwin, win32/*.*, msvcstuff/*.* : Updating
	  Win32 version numbers.
	* Makefile.am, audio/midi_drivers/Makefile.am, server/Makefile.am :
	  Added a few missing files so building the source dist will include
	  all the files (as far as I know)

2002-06-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* NEWS, configure.in, Makefile.be, Makefile.MorphOS: 0.99.1RC2
	* keyactions.cc: changed version string (copyright -2002)

2002-06-05  Jeff Freedman  <jeff@amy.nerble.net>

	* cheat.cc (public): Cut/copy/paste added to Exult & EStudio.

2002-06-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: applied patches by Robert Bihlmeyer
	* data/credits.txt: added Robert Bihlmeyer

2002-06-04  Ryan Nunn  <triforce@merlin.net.au>
	* files/utils.cc : Working around the evil Windows 'Long Filename
	  Problem', even though it's actually got very little to do with
	  filenames at all. Hopefully it's gone now! Also added in a work
	  around for when trailing slashes are detected in a filename that has
	  been passed to get_system_path().
	* fnames.h, gamedat.cc, gamemap.cc, palette.cc : Removed STATICDAT and
	  PATCHDAT defines because they include a trailing slash, and this
	  might cause things to get into trouble in Win9x.
	* server/server.cc : YATSP (Yet another trailing slash problem)
	* mapedit/studio.cc : Fixed Win9x shape file list problem. It was being
	  caused by trailing slashes on path names! Also fixed compiling
	  problem.