@@ -30,6 +30,10 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "gamewin.h"
 #include "chunks.h"
 
+#ifdef _MSC_VER
+#pragma optimize("t", off)
+#endif
+
 // Make linker happy.
 
 void DummY()
